--- a/TextViewer.cls
+++ b/TextViewer.cls
@@ -248,8 +248,8 @@ End Sub
 Public Property Get FileName() As String
 FileName = myfilename
 End Property
-Sub NewTitle(RHS As String, addpixelstoo As Long, Optional factor As Single = 1)
-Title = RHS
+Sub NewTitle(rhs As String, addpixelstoo As Long, Optional factor As Single = 1)
+Title = rhs
 
 
 Set mDoc1 = New Document
@@ -281,8 +281,8 @@ glistN.PrepareToShow 10
 all = mDoc.DocLines
 glistN.CalcAndShowBar
 End Sub
-Public Property Let FileName(ByVal RHS As String)
-myfilename = RHS
+Public Property Let FileName(ByVal rhs As String)
+myfilename = rhs
 onelineheight = 0
 Dim thisdoc As New Document, header As New Document
 Set mDoc = thisdoc
@@ -291,10 +291,10 @@ Dim i As Long
 glistN.NoCaretShow = True
 ClearRedo
 ClearUndo
-If RHS = vbNullString Then
+If rhs = vbNullString Then
 mDoc.textDoc = vbNullString
 Else
-mDoc.textDoc = ReadUnicodeOrANSI(RHS)
+mDoc.textDoc = ReadUnicodeOrANSI(rhs)
 End If
 
 Dim what$, ThatPara As Long, pastchars
@@ -330,9 +330,9 @@ Public Sub ResetSelColors()
 SelectionTextColor = &HFFFFFF
 SelectionColor = &H666666
 End Sub
-Property Let TabWidth(RHS As Long)
-    tParam.iTabLength = Abs(RHS)
-    glistN.TabWidthChar = Abs(RHS)
+Property Let TabWidth(rhs As Long)
+    tParam.iTabLength = Abs(rhs)
+    glistN.TabWidthChar = Abs(rhs)
 End Property
 
 
@@ -1122,9 +1122,13 @@ Else
 glistN.ScrollToSilent 0
 End If
 ElseIf glistN.ListIndex > glistN.ScrollFrom + glistN.lines Then
-glistN.ScrollToSilent glistN.ListIndex - glistN.lines
+If glistN.listcount - glistN.ListIndex < glistN.lines Then
+glistN.ScrollToSilent glistN.listcount - glistN.lines
+Else
+glistN.ScrollToSilent glistN.ListIndex - glistN.lines / 2
+End If
 ElseIf glistN.ListIndex > glistN.lines And glistN.listcount - glistN.ListIndex < glistN.lines Then
-glistN.ScrollToSilent glistN.ListIndex - glistN.lines
+glistN.ScrollToSilent glistN.listcount - glistN.lines
 End If
 If glistN.enabled Then glistN.ShowPan
 mDoc.busy = False
@@ -1647,6 +1651,7 @@ OLDPOS = Charpos
         End If
         
         mDoc.ReWritePara BlockStartPara, b$
+        
     Else
         order1 = mDoc.ParagraphOrder(BlockStartPara)
         order2 = mDoc.ParagraphOrder(BlockEndPara)
@@ -1736,6 +1741,7 @@ mDoc.MarkParagraphID = oldid
 Charpos = OLDPOS
 End If
 End If
+
 Render
 
 End If
@@ -3508,10 +3514,10 @@ Public Property Get EditDoc() As Boolean
 EditDoc = mEditDoc
 End Property
 
-Public Property Let EditDoc(ByVal RHS As Boolean)
-mEditDoc = RHS
-If Not RHS Then glistN.MarkNext = 0
-glistN.EditFlag = RHS
+Public Property Let EditDoc(ByVal rhs As Boolean)
+mEditDoc = rhs
+If Not rhs Then glistN.MarkNext = 0
+glistN.EditFlag = rhs
 If glistN.enabled Then
 glistN.ShowMe2
 End If
@@ -3531,11 +3537,11 @@ End Property
 Public Sub WrapAll()
 mDoc.WrapAgain
 End Sub
-Public Property Let ParaSelStart(ByVal RHS As Long)
+Public Property Let ParaSelStart(ByVal rhs As Long)
 ' we have a new ParaSelStart
 ' we want a new listindex...and a new selstart
 
-Charpos = RHS
+Charpos = rhs
 Render
 End Property
 
@@ -3543,9 +3549,9 @@ Public Property Get nowrap() As Boolean
 nowrap = mNoWrap
 End Property
 
-Public Property Let nowrap(ByVal RHS As Boolean)
-If Not (mNoWrap = RHS) Then
-mNoWrap = RHS
+Public Property Let nowrap(ByVal rhs As Boolean)
+If Not (mNoWrap = rhs) Then
+mNoWrap = rhs
 glistN.NoScroll = Not mNoWrap
     If Not mDoc.IsEmpty Then
     WrapAll
@@ -3561,8 +3567,8 @@ Public Property Get enabled() As Boolean
 enabled = glistN.enabled
 End Property
 
-Public Property Let enabled(ByVal RHS As Boolean)
-If Not RHS Then
+Public Property Let enabled(ByVal rhs As Boolean)
+If Not rhs Then
 glistN.Noflashingcaret = True
 Show
 
@@ -3573,7 +3579,7 @@ Else
 glistN.Noflashingcaret = Not glistN.NoCaretShow
 End If
 End If
-glistN.enabled = RHS
+glistN.enabled = rhs
 End Property
 Sub SetFocus()
 glistN.SetFocus
@@ -3583,8 +3589,8 @@ Public Property Get ScrollKeyUpDown() As Boolean
 ScrollKeyUpDown = glistN.NoFreeMoveUpDown
 End Property
 
-Public Property Let ScrollKeyUpDown(ByVal RHS As Boolean)
-glistN.NoFreeMoveUpDown = RHS
+Public Property Let ScrollKeyUpDown(ByVal rhs As Boolean)
+glistN.NoFreeMoveUpDown = rhs
 End Property
 Public Sub SetRowColumn(Row As Long, ByVal Column As Long, Optional noShow As Boolean = False)
 ' base 0 for column as input
@@ -3622,7 +3628,7 @@ End Function
 Public Property Get Text() As String
 Text = mDoc.textDoc
 End Property
-Public Property Let Text(RHS As String)
+Public Property Let Text(rhs As String)
 Dim oldenabled As Boolean
 LastListIndex = 0
 If Me.HaveMarkedText Then
@@ -3634,7 +3640,7 @@ oldenabled = glistN.enabled
 glistN.enabled = False
 Set mDoc = New Document
 mDoc.ColorEvent = Not NoColor
-mDoc.textDoc = RHS
+mDoc.textDoc = rhs
 all = mDoc.DocLines
 BlockStartPara = 0
 BlockStartPos = 1
@@ -3653,7 +3659,7 @@ Dim what$, ThatPara As Long, pastchars
    pastchars = mDoc.TextParagraphLine(1, what$, ThatPara)
 mDoc.MarkParagraphID = ThatPara
 End Property
-Public Property Let Text2(RHS As String)
+Public Property Let Text2(rhs As String)
 Dim oldenabled As Boolean
 If Me.HaveMarkedText Then
 BlockStartPara = BlockEndPara
@@ -3664,7 +3670,7 @@ oldenabled = glistN.enabled
 glistN.enabled = False
 Set mDoc = New Document
 mDoc.ColorEvent = Not NoColor
-mDoc.textDoc2 = RHS
+mDoc.textDoc2 = rhs
 all = mDoc.DocLines
 BlockStartPara = 0
 BlockStartPos = 1
@@ -3683,7 +3689,7 @@ Dim what$, ThatPara As Long, pastchars
    pastchars = mDoc.TextParagraphLine(1, what$, ThatPara)
 mDoc.MarkParagraphID = ThatPara
 End Property
-Public Property Let TextColor(RHS As String)
+Public Property Let TextColor(rhs As String)
 Dim oldenabled As Boolean
 If Me.HaveMarkedText Then
 BlockStartPara = BlockEndPara
@@ -3693,7 +3699,7 @@ End If
 oldenabled = glistN.enabled
 glistN.enabled = False
 Set mDoc = New Document
-mDoc.textDocColor = RHS
+mDoc.textDocColor = rhs
 all = mDoc.DocLines
 ClearRedo
 ClearUndo
@@ -3708,12 +3714,12 @@ End Property
 Public Property Get TextLines() As Long
 TextLines = mDoc.DocLines
 End Property
-Public Property Let LineSpacingSilent(ByVal RHS As Long)
-glistN.addpixels = RHS
+Public Property Let LineSpacingSilent(ByVal rhs As Long)
+glistN.addpixels = rhs
 ''Render
 End Property
-Public Property Let LineSpacing(ByVal RHS As Long)
-glistN.addpixels = RHS
+Public Property Let LineSpacing(ByVal rhs As Long)
+glistN.addpixels = rhs
 Render
 End Property
 
@@ -3735,8 +3741,8 @@ End If
 Set UndoDoc = oldmydoc
 End If
 End Property
-Public Property Let SelLengthSilent(ByVal RHS As Long)
-If RHS <= 0 Then
+Public Property Let SelLengthSilent(ByVal rhs As Long)
+If rhs <= 0 Then
     ' a copy of glistN_MarkDestroyAny
     BlockEndPara = mDoc.MarkParagraphID
     BlockStartPara = BlockEndPara
@@ -3755,21 +3761,21 @@ glistN.MarkNext = 1
         BlockEndline = BlockStartLine
     BlockEndCursor = BlockStartCursor + 1
     
-mDoc.FindPos BlockStartLine + 1, BlockStartCursor, RHS, BlockEndline, BlockEndCursor, BlockEndPara, BlockEndPos
+mDoc.FindPos BlockStartLine + 1, BlockStartCursor, rhs, BlockEndline, BlockEndCursor, BlockEndPara, BlockEndPos
 
 BlockEndline = BlockEndline - 1 ' base 0
 
 
     BlockTopline = BlockStartLine
     BlockBottomline = BlockEndline
-If RHS <> 0 Then
+If rhs <> 0 Then
 glistN.MarkNext = 2
 'If glistN.Enabled Then glistN.ShowPan
 End If
 End If
 End Property
-Public Property Let SelLength(ByVal RHS As Long)
-If RHS <= 0 Then
+Public Property Let SelLength(ByVal rhs As Long)
+If rhs <= 0 Then
     ' a copy of glistN_MarkDestroyAny
     BlockEndPara = mDoc.MarkParagraphID
     BlockStartPara = BlockEndPara
@@ -3788,13 +3794,13 @@ glistN.MarkNext = 1
         BlockEndline = BlockStartLine
     BlockEndCursor = BlockStartCursor + 1
     
-mDoc.FindPos BlockStartLine + 1, BlockStartCursor, RHS, BlockEndline, BlockEndCursor, BlockEndPara, BlockEndPos
+mDoc.FindPos BlockStartLine + 1, BlockStartCursor, rhs, BlockEndline, BlockEndCursor, BlockEndPara, BlockEndPos
 
 BlockEndline = BlockEndline - 1 ' base 0
 
     BlockTopline = BlockStartLine
     BlockBottomline = BlockEndline
-If RHS <> 0 Then
+If rhs <> 0 Then
 glistN.MarkNext = 2
 If glistN.enabled Then glistN.ShowPan
 End If
@@ -3805,9 +3811,9 @@ Public Property Get Visible() As Boolean
 Visible = glistN.Visible
 End Property
 
-Public Property Let Visible(ByVal RHS As Boolean)
+Public Property Let Visible(ByVal rhs As Boolean)
 ''If Not rhs Then LastSelStart = SelStart
-glistN.Visible = RHS
+glistN.Visible = rhs
 
 End Property
 Public Property Get FontSize() As Single
@@ -3826,10 +3832,10 @@ End Property
 Public Property Set Font(New_Font As Font)
     Set glistN.Font = New_Font
 End Property
-Public Property Let backcolor(ByVal RHS As OLE_COLOR)
+Public Property Let backcolor(ByVal rhs As OLE_COLOR)
 
     
-glistN.backcolor = RHS
+glistN.backcolor = rhs
   
     
 End Property
@@ -3840,9 +3846,9 @@ Public Property Get ForeColor() As OLE_COLOR
     ForeColor = glistN.ForeColor
 End Property
 
-Public Property Let ForeColor(ByVal RHS As OLE_COLOR)
+Public Property Let ForeColor(ByVal rhs As OLE_COLOR)
 
-    glistN.ForeColor = RHS
+    glistN.ForeColor = rhs
 
 End Property
 
@@ -3850,15 +3856,15 @@ Public Property Get top() As Long
 top = glistN.TopTwips
 End Property
 
-Public Property Let top(ByVal RHS As Long)
-glistN.TopTwips = RHS
+Public Property Let top(ByVal rhs As Long)
+glistN.TopTwips = rhs
 End Property
 Public Property Get Height() As Long
 Height = glistN.HeightTwips
 End Property
 
-Public Property Let Height(ByVal RHS As Long)
-glistN.HeightTwips = RHS
+Public Property Let Height(ByVal rhs As Long)
+glistN.HeightTwips = rhs
 End Property
 Public Sub Move(ByVal mleft As Long, ByVal mtop As Long, mWidth As Long, mHeight As Long)
 glistN.MoveTwips mleft, mtop, mWidth, mHeight
@@ -3901,7 +3907,7 @@ End If
 
 End If
 End Property
-Public Property Let SelText(ByVal RHS As String)
+Public Property Let SelText(ByVal rhs As String)
 Dim kk As Long, Pad$
 
 
@@ -3918,22 +3924,22 @@ BlockEndline = BlockStartLine
 BlockEndPara = BlockStartPara
 BlockEndPos = BlockStartPos
 Dim k As Long, l As Long
-If Right$(RHS, 1) = vbCr Then RHS = RHS + vbLf
-If RHS <> "" Then
+If Right$(rhs, 1) = vbCr Then rhs = rhs + vbLf
+If rhs <> "" Then
 
 If NumberOnly Then
 
-Pad$ = space$(Len(RHS) + Len(glistN.list(0)))
+Pad$ = space$(Len(rhs) + Len(glistN.list(0)))
 Mid$(Pad$, 1, Charpos - 1) = Left$(glistN.list(0), Charpos - 1)
-Mid$(Pad$, Charpos, Len(RHS)) = RHS
+Mid$(Pad$, Charpos, Len(rhs)) = rhs
 If Len(glistN.list(0)) > 0 Then
-Mid$(Pad$, Charpos + Len(RHS) - 1) = Mid$(glistN.list(0), Charpos)
+Mid$(Pad$, Charpos + Len(rhs) - 1) = Mid$(glistN.list(0), Charpos)
 End If
-RHS = glistN.list(0)
+rhs = glistN.list(0)
 glistN.list(0) = Pad$
-If Not glistN.list(0) = Pad$ Then glistN.list(0) = RHS
+If Not glistN.list(0) = Pad$ Then glistN.list(0) = rhs
 Else
-mDoc.InsertDoc mDoc.MarkParagraphID, Charpos, RHS
+mDoc.InsertDoc mDoc.MarkParagraphID, Charpos, rhs
 End If
 Render
 End If
@@ -3955,44 +3961,44 @@ glistN.MarkNext = 2
 SelStart = k
 
 End Property
-Public Property Let InsertTextNoRender(ByVal RHS As String)
+Public Property Let InsertTextNoRender(ByVal rhs As String)
 Dim b As Boolean
 ClearRedo
 PushUndo
 glistN_MarkDelete False
 glistN.MarkNext = 0
 undomode = 5 ' like 1
-RemoveUndo (RHS)
+RemoveUndo (rhs)
 undomode = 4 ' like 0
 b = enabled
 enabled = False
 Dim k As Long, l As Long
-If Right$(RHS, 1) = vbCr Then RHS = RHS + vbLf
-If RHS <> "" Then
+If Right$(rhs, 1) = vbCr Then rhs = rhs + vbLf
+If rhs <> "" Then
 
 
-mDoc.InsertDoc mDoc.MarkParagraphID, Charpos, RHS
+mDoc.InsertDoc mDoc.MarkParagraphID, Charpos, rhs
 all = mDoc.DocLines
 
 End If
 enabled = b
 End Property
-Public Property Let InsertText2(ByVal RHS As String)
+Public Property Let InsertText2(ByVal rhs As String)
 glistN_MarkDelete True
 glistN.MarkNext = 0
-If Right$(RHS, 1) = vbCr Then RHS = RHS + vbLf
+If Right$(rhs, 1) = vbCr Then rhs = rhs + vbLf
 mDoc.ResetColor mDoc.MarkParagraphID
-mDoc.InsertDoc mDoc.MarkParagraphID, Charpos, RHS
+mDoc.InsertDoc mDoc.MarkParagraphID, Charpos, rhs
 End Property
 
-Public Property Let InsertText(ByVal RHS As String)
+Public Property Let InsertText(ByVal rhs As String)
 glistN_MarkDelete False
 glistN.MarkNext = 0
 Dim k As Long, l As Long
-If Right$(RHS, 1) = vbCr Then RHS = RHS + vbLf
-If RHS <> "" Then
+If Right$(rhs, 1) = vbCr Then rhs = rhs + vbLf
+If rhs <> "" Then
 mDoc.ResetColor mDoc.MarkParagraphID
-mDoc.InsertDoc mDoc.MarkParagraphID, Charpos, RHS
+mDoc.InsertDoc mDoc.MarkParagraphID, Charpos, rhs
 Render
 
 End If
@@ -4028,7 +4034,7 @@ If findit <> -1 Then LastSelStart = findit
 SelStart = findit
 End Property
 
-Public Property Let SelStart(ByVal RHS As Long)
+Public Property Let SelStart(ByVal rhs As Long)
 Dim findit As Long, sel1 As Long
 sel1 = SelLength
     BlockEndPara = mDoc.MarkParagraphID
@@ -4036,17 +4042,17 @@ sel1 = SelLength
     BlockStartPos = BlockEndPos
     glistN.MarkNext = 0
 Dim a As Long, b As Long, c As Long, d As Long
-findit = RHS
+findit = rhs
 mDoc.FindPos 1, 0, findit, a, b, c, d
 
 SetRowColumn a, b, sel1 <> 0
 If sel1 <> 0 Then SelLength = sel1: LastSelStart = sel1
 End Property
-Public Property Let SelStartSilent(ByVal RHS As Long)
+Public Property Let SelStartSilent(ByVal rhs As Long)
 Dim findit As Long
 Dim a As Long, b As Long, c As Long, d As Long
-LastSelStart = RHS
-findit = RHS
+LastSelStart = rhs
+findit = rhs
 mDoc.FindPos 1, 0, findit, a, b, c, d
 SetRowColumn a, b, True
 End Property
@@ -4416,30 +4422,8 @@ End If
     r.Left = rleft
     End Sub
 
-    
-
-Function colorline(ParamArray aa() As Variant) As Variant()
-colorline = aa()
-End Function
 
 
-Function checkme(bb() As Variant, probethis As Long) As Long
-Dim st&, ste&
-'' checkme colorline(5, 1, 1,20,3,24,1,29),60
-ste& = UBound(bb())
-If probethis = -1 Then
-checkme = bb(ste& - 1)
-Else
-For st& = 3 To ste& Step 2
-    If probethis < bb(st&) Then
-    
-    checkme = bb(st& - 3)
-    Exit Function
-    End If
-Next st&
-checkme = bb(st& - 3)
-End If
-End Function
 Function SplitStringUsingArray(ByVal c$, bb() As Variant, wc&, cuts() As Variant) As String()
 Dim cc$()
 ReDim cc$((UBound(bb()) + 1) / 2)
