--- a/mHandler.cls
+++ b/mHandler.cls
@@ -33,7 +33,10 @@ End Sub
 
 ''Public Par1 As Variant
 Private Sub Class_Terminate()
+If Not objref Is Nothing Then
+If Typename(objref) = "GuiM2000" Then Stop
 Set objref = Nothing
+End If
 End Sub
 Public Sub CopyTo(a As mHandler)
 If IamEnum Then Set a = Me: Exit Sub
